--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_map: ^7.0.0
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
